[package]
name = "qkd"
version = "0.0.0"
edition = "2021"
authors = ["Daniel Escanez-Exposito <jescanez@ull.edu.es>"]
description = "A Quantum Key Distribution simulator developed in Rust"
license = "MIT"
repository = "https://github.com/jdanielescanez/qkd"

[dependencies]
bon = "3.7.2"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
num-complex = "0.4.6"
rand = "0.9.2"
